# MIDI

./: .gitignore  CMakeLists.txt  Doxyfile  imgui.ini  main.cpp
Application/: Application.cpp  Application.h  Song.cpp  Song.h  Take.cpp  Take.h  Track.cpp  Track.h
Assets/: presets.txt
Director/: Director.cpp  Director.h  Quantizer.cpp  Quantizer.h
Director/Harmonies/: CanonHarmony.cpp  CanonHarmony.h  Harmony.cpp  Harmony.h  ModulationHarmony.cpp  ModulationHarmony.h  TranspositionHarmony.cpp  TranspositionHarmony.h
Director/Harmonies/ChoralHarmony/: ChoralHarmony.cpp  ChoralHarmony.h  Tessiture.cpp  Tessiture.h  Voices.cpp  Voices.h
Director/Harmonies/SingleHarmonies/: ModulationHarmony.cpp  ModulationHarmony.h  RandomHarmony.cpp  RandomHarmony.h  SingleHarmony.cpp  SingleHarmony.h  TranspositionHarmony.cpp  TranspositionHarmony.h
MIDI/: AudioPlayer.cpp  AudioPlayer.h  FileManager.cpp  FileManager.h  MessageFilter.cpp  MessageFilter.h  Processor.cpp  Processor.h
MIDI/IO/: IOManager.cpp  IOManager.h  IOType.h  InputPort.cpp  InputPort.h  OutputPort.cpp  OutputPort.h  Port.cpp  Port.h
MIDI/Messages/: Instrument.cpp  Instrument.h  Message.cpp  Message.h
MIDI/Messages/Messages/: Aftertouch.cpp  Aftertouch.h  ChannelPressure.cpp  ChannelPressure.h  Controller.cpp  Controller.h  NoteMessage.cpp  NoteMessage.h  NoteOff.cpp  NoteOff.h  NoteOn.cpp  NoteOn.h  PitchWheel.cpp  PitchWheel.h  ProgramChange.cpp  ProgramChange.h
Sequencer/: Cycle.cpp  Cycle.h  Metronome.cpp  Metronome.h  Sequencer.cpp  Sequencer.h  Timer.cpp  Timer.h
Theory/: Note.cpp  Note.h  NoteFilter.cpp  Theory.cpp  Theory.h  TimeDivision.cpp  TimeDivision.h
Theory/Chord/: Chord.cpp  Chord.h  ChordNote.cpp  ChordNote.h
Theory/Key/: IntervalSequence.cpp  IntervalSequence.h  Key.cpp  Key.h  MelodicMinor.cpp  MelodicMinor.h
Theory/Note/: Note.cpp  Note.h  NoteFilter.h  RootNote.cpp  RootNote.h
UI/: ColorRange.cpp  ColorRange.h  Font.cpp  Font.h  KeyColor.cpp  KeyColor.h  MessageFilterCheckboxes.cpp  MessageFilterCheckboxes.h  UserInterface.cpp  UserInterface.h
Utilities/: Average.cpp  Average.h  Utilities.cpp  Utilities.h  Zip.h
imgui/: Renderer.h  Renderer.mm  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
include/libremidi/: libremidi.hpp  message.hpp
